// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row allows additional classes to be passed through 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -1.6rem;
  margin-right: -1.6rem;
}

<div>
  <div
    class="c0 row test-class"
  />
</div>
`;

exports[`Row has a row class by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -1.6rem;
  margin-right: -1.6rem;
}

<div>
  <div
    class="c0 row "
  />
</div>
`;

exports[`Row renders children 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -1.6rem;
  margin-right: -1.6rem;
}

<div>
  <div
    class="c0 row "
  >
    <div
      class="child-content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Row renders correctly without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -1.6rem;
  margin-right: -1.6rem;
}

<div>
  <div
    class="c0 row "
  />
</div>
`;
